Page loading flickering resolved
1. Ads set to controller on enter

--- a/scss/feed/category-feeds.styles.scss
+++ b/scss/feed/category-feeds.styles.scss
@@ -82,11 +82,11 @@
 }
 
 .offline {
-	margin-top: 40px;
+	margin-top: 25px;
 	text-align: center;
 	img {
-		padding: 30px 0;
-		height: 250px;
+		padding: 20px 0;
+		height: 200px;
 	}
 	p {
 		color: #000;
